<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout"
        android:layout_width="wrap_content"
        android:layout_marginEnd="@dimen/text_lay_rig"
        android:layout_marginStart="@dimen/text_lay_left"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/searchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:hint="@string/hint_phrase" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/input_layout"
        android:layout_alignParentEnd="true"
        android:background="@color/colorPrimaryFaded"
        android:layout_alignBottom="@id/input_layout"
        android:layout_marginStart="@dimen/layout_left"
        android:layout_marginEnd="@dimen/lay_right"
        android:id="@+id/button_search" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/input_layout"
        android:layout_marginTop="@dimen/mr"
        android:layout_above="@id/adView"
        android:id="@+id/recycler"
        android:layout_marginBottom="@dimen/padding"
        android:clipChildren="false">
    </android.support.v7.widget.RecyclerView>


    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorPrimaryFaded"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/adUnitId">
    </com.google.android.gms.ads.AdView>

</RelativeLayout>


