<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    tools:context="com.example.kishore_yuva.lyrix.Activities.SearchActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:layout_height="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:background="@color/colorPrimary"
            android:elevation="@dimen/toolbar_ele"
            android:theme="@style/ThemeOverlay.AppCompat.Dark"
            android:id="@+id/toolbar">
        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

    <fragment android:name="com.example.kishore_yuva.lyrix.Activities.SearchFragment"
        android:id="@+id/search_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize" />

</android.support.design.widget.CoordinatorLayout>

