<resources>
    <string name="app_name">Lyrix</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="title_activity_lyrics">LyricsActivity</string>

    <string name="hint_phrase">Search by Title</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_title_bar">Lyrix(Favourites)</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="adUnitId">ca-app-pub-3940256099942544/6300978111</string>
    <string name="adAppId">ca-app-pub-4674313157619458~5134801051</string>

    <string name="search">Search</string>
    <string name="name">Name</string>
    <string name="artist">Artist</string>
    <string name="title">Title</string>
    <string name="param1">param1</string>
    <string name="lyrics">Lyrics</string>
    <string name="todo">TODO</string>
    <string name="artistimage">artistImage</string>
    <string name="favourite">favourite</string>
    <string name="loading">Loading...</string>
</resources>
